@@ -14,7 +14,6 @@ import org.springframework.security.core.userdetails.UsernameNotFoundException;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -28,17 +27,19 @@ public class UserDetailsServiceImpl implements UserDetailsService {
         SysUser user = userMapper.selectOne(
                 new LambdaQueryWrapper<SysUser>().eq(SysUser::getUsername, username));
         if (user == null) {
-            throw new UsernameNotFoundException("用户不存在: " + username);
+            throw new UsernameNotFoundException("user not found: " + username);
         }
-        List<SysRole> roles = roleMapper.selectByUserId(user.getId());
-        List<SimpleGrantedAuthority> authorities = roles.stream()
-                .map(r -> new SimpleGrantedAuthority("ROLE_" + r.getRoleCode()))
-                .collect(Collectors.toList());
+
+        List<SimpleGrantedAuthority> authorities = roleMapper.selectByUserId(user.getId()).stream()
+                .map(SysRole::getRoleCode)
+                .map(roleCode -> new SimpleGrantedAuthority("ROLE_" + roleCode))
+                .toList();
+
         return User.builder()
                 .username(user.getUsername())
                 .password(user.getPassword())
                 .authorities(authorities)
-                .accountLocked(user.getStatus() == 0)
+                .accountLocked(user.getStatus() != null && user.getStatus() == 0)
                 .build();
     }
 }
